--- a/package.json
+++ b/package.json
@@ -21,14 +21,24 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "lint": "eslint src --max-warnings=0 --fix"
   },
   "eslintConfig": {
     "extends": [
       "react-app",
       "react-app/jest",
-      "prettier"
-    ]
+      "plugin:prettier/recommended"
+    ],
+    "rules": {
+      "prettier/prettier": [
+        "error",
+        {},
+        {
+          "usePrettierrc": true
+        }
+      ]
+    }
   },
   "browserslist": {
     "production": [
@@ -44,6 +54,7 @@
   },
   "devDependencies": {
     "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-prettier": "^4.0.0",
     "prettier": "^2.7.1"
   }
 }
