--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "typescript": "^4.7.4",
     "web-vitals": "^2.1.4"
   },
+  "lint-staged": {
+    "*.{ts,tsx}": "eslint --fix --max-warnings=0"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
