--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-query": "^3.39.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.7.4",
+    "use-immer": "^0.7.0",
     "web-vitals": "^2.1.4"
   },
   "lint-staged": {
