--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^8.0.1",
     "lint-staged": "^13.0.2",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "sass": "^1.53.0"
   }
 }
