--- a/package.json
+++ b/package.json
@@ -30,7 +30,6 @@
   },
   "scripts": {
     "start": "PORT=3003 react-scripts start",
-    "start:ls": "LOCAL_STORAGE=true PORT=3003 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -67,6 +66,7 @@
   },
   "devDependencies": {
     "@types/crypto-js": "^4.1.1",
+    "cross-env": "^7.0.3",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-prettier": "^4.0.0",
     "husky": "^8.0.1",
