--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.33.0",
     "react-query": "^3.39.1",
     "react-scripts": "5.0.1",
+    "ts-pattern": "^4.0.3",
     "typescript": "^4.7.4",
     "use-immer": "^0.7.0",
     "web-vitals": "^2.1.4"
